// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defer hydrating with hydrateReady 1`] = `
Object {
  "data": "{
    \\"1\\": {
        \\"C\\": [
            \\"2\\"
        ]
    },
    \\"3\\": {
        \\"N\\": [
            0
        ]
    },
    \\"component\\": {
        \\"O\\": {
            \\"dataLoaded\\": true
        },
        \\"C\\": [
            \\"3\\"
        ],
        \\"N\\": [
            1
        ]
    }
}",
  "html": "
 Data loaded!
 <!--0-->
",
}
`;

exports[`defer hydrating with hydrateReady with element wrapper 1`] = `
Object {
  "data": "{
    \\"1\\": {
        \\"C\\": [
            \\"2\\"
        ]
    },
    \\"3\\": {
        \\"N\\": [
            1,
            [
                1,
                0
            ]
        ]
    },
    \\"component\\": {
        \\"O\\": {
            \\"dataLoaded\\": true
        },
        \\"C\\": [
            \\"3\\"
        ],
        \\"N\\": [
            0,
            [
                0,
                0
            ],
            [
                0,
                0,
                0
            ],
            [
                0,
                2
            ]
        ]
    }
}",
  "html": "
<div>
  <p>Page state</p>
  <p>Data loaded!</p>
  <!--0-->
</div>
",
}
`;
